# FAME3R

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt
.github/workflows/: build.yml  check.yml  ci.yml  docs.yml  python_package.yml  test.yml
docs/: conf.py  index.rst
docs/source/: citation.rst  installation.rst  summary.rst
docs/source/modules/: descriptors.rst  fame3r.FAME3RScoreEstimator.rst  fame3r.FAME3RVectorizer.rst  fame3r.rst  score.rst
docs/source/tutorials/: CommandLine.ipynb  PythonAPI.ipynb
docs/source/tutorials/data/metatrans_autoannotated_cleaned/: test.sdf  train.sdf
fame3r/: __init__.py  _internal.py  compute_descriptors.py  descriptors.py  fame_scores.py  performance_metrics.py  score.py
fameal/: __init__.py  compute_descriptors.py  performance_metrics.py
scripts/: cli.py  cv_hp_search.py  cvsearch.py  infer.py  simulate_k_fold_cv.py  test.py  train.py
src/: compute_descriptors.py  performance_metrics.py
src/fame3r/: __init__.py  _cli.py  _internal.py  _nerdd.py  descriptors.py  score.py
src/fame3r/data/: nerdd.yml
tests/: test_descriptors.py  test_input_output.py  test_sklearn.py  test_snapshot.py  test_test.py
tests/__snapshots__/: test_snapshot.ambr
tests/inputs/: COMBINED.sdf  IMATINIB.sdf
tests/inputs/single/: ASPIRIN.sdf  CYSPLATIN.sdf  METHYLPHENIDATE_HCL.sdf  MODAFINIL.sdf
