[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "fame3r"
version = "2025.1.0"
description = "FAME3R: a re-implementation of the FAME3 model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Roxane Jacob", email = "roxane.axel.jacob@univie.ac.at"},
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pylint",
  "pydocstyle",
]

[tool.pylint.messages_control]
disable = [
    "R0801",  # duplicate-code
    "R0914",  # too-many-locals
]
