[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "fame3r"
version = "0.0.1"
description = "FAME3R: a re-implementation of the FAME3 model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Roxane Jacob", email = "roxane.axel.jacob@univie.ac.at"},
]

dependencies = [
  "CDPKit==1.1.1",
  "joblib==1.4.2",
  "numpy>=1.26.4, <2.0.0",
  "pandas>=2.2.2",
  "scikit-learn>=1.5.1",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pylint",
  "pydocstyle",
]

[tool.pylint.messages_control]
disable = [
    "R0801",  # duplicate-code
    "R0914",  # too-many-locals
]
