[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "fame3r"
version = "2.0.0"
description = "FAME3R: a re-implementation of the FAME3 model"
readme = "README.rst"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Roxane Jacob", email = "roxane.axel.jacob@univie.ac.at"},
    {name = "Leo Gaskin", email = "leo.gaskin@univie.ac.at"},
]

dependencies = [
    "CDPKit==1.2.3",
    "joblib==1.4.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.1",
]

[dependency-groups]
build = ["build"]
tests = [
    "pytest>=8.4.1",
    "syrupy>=4.9.1",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
]
dev = [
    "basedpyright>=1.29.4",
    "jupyter>=1.1.1",
    "jupyter-ruff>=0.3.0",
    "ruff>=0.11.13",
    { include-group = "build" },
    { include-group = "tests" },
    { include-group = "docs" },
]

[project.scripts]
fame3r-cv-hp-search = "scripts.cv_hp_search:main"
fame3r-infer = "scripts.infer:main"
fame3r-test = "scripts.test:main"
fame3r-train = "scripts.train:main"

[tool.hatch.build.targets.sdist]
include = [
    "fame3r",
    "scripts",
]

[tool.hatch.build.targets.wheel]
include = [
    "fame3r",
    "scripts",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff.lint]
extend-select = ["I"]
